@@ -46,6 +46,7 @@ case "${1}" in
          msg="/fastboot found, will omit "
          msg="${msg} file system checks as requested.\n"
          log_info_msg "${msg}"
+         rm /fastboot
          exit 0
       fi
 
@@ -73,13 +74,20 @@ case "${1}" in
          msg="${msg} system checks as requested."
          log_success_msg "$msg"
          options="-f"
+         rm /forcefsck
       else
          options=""
       fi
 
       log_info_msg "Checking file systems..."
+      
       # Note: -a option used to be -p; but this fails e.g. on fsck.minix
-      fsck ${options} -a -A -C -T >/dev/null
+      if is_true "$VERBOSE_FSCK"; then
+         fsck ${options} -a -A -C -T
+      else
+         fsck ${options} -a -A -C -T >/dev/null
+      fi
+
       error_value=${?}
 
       if [ "${error_value}" = 0 ]; then
