@@ -1,6 +1,0 @@
-This directory contains documentation for each rule file used in LFS.
-
-Each .rules file should contain a corresponding .txt file in this directory,
-which explains both the overall purpose of the rules file, and each type of
-rule contained therein.
-
