@@ -1,3 +1,9 @@
+2012-10-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove unneeded sleep in killproc
+   * Add option for verbose fsck
+   * Flatten directory structure of tarball
+   * Remove /fastboot or /forcecheck if set
+
 2012-09-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Add udevadm trigger --action=change line to udev script
      to support initramfs better
